# gantz

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Trunk.toml  flake.nix  gantz.d.ts  gantz.js  gantz_bg.wasm.d.ts  index.html  release-plz.toml  shell.nix
.github/workflows/: ci.yml  cleanup-pr-preview.yml  deploy-pr-preview.yml  gantz.yml  release-plz.yml
base/: base.gantz
crates/bevy_gantz/: CHANGELOG.md  Cargo.toml
crates/bevy_gantz/src/: builtin.rs  debounced_input.rs  egui.rs  env.rs  eval.rs  head.rs  lib.rs  plugin.rs  reg.rs  state.rs  storage.rs  view.rs  vm.rs
crates/bevy_gantz_egui/: CHANGELOG.md  Cargo.toml
crates/bevy_gantz_egui/src/: base.rs  lib.rs  storage.rs  sugar.rs
crates/bevy_gantz_egui/src/node/: frame_bang.rs  mod.rs  tick_bang.rs  update_bang.rs
crates/gantz/: CHANGELOG.md  Cargo.toml
crates/gantz/src/: builtin.rs  env.rs  graph.rs  lib.rs  main.rs  main_update_base.rs  node.rs  persist.rs  storage.rs  window.rs
crates/gantz/web/: index.html  initializer.js  manifest.json  sw.js
crates/gantz_base/: CHANGELOG.md  Cargo.toml  base.gantz
crates/gantz_ca/: CHANGELOG.md  Cargo.toml
crates/gantz_ca/src/: ca.rs  commit.rs  diff.rs  graph.rs  hash.rs  history.rs  lib.rs  merge.rs  registry.rs  serde_sorted.rs
crates/gantz_ca_derive/: Cargo.toml
crates/gantz_ca_derive/src/: lib.rs
crates/gantz_core/: CHANGELOG.md  Cargo.toml
crates/gantz_core/src/: builtin.rs  ca.rs  codegen.rs  compile.rs  diagnostic.rs  edge.rs  graph.rs  lib.rs  node.rs  reg.rs  visit.rs  vm.rs
crates/gantz_core/src/codegen/: flow.rs  meta.rs  node_fns.rs  rosetree.rs
crates/gantz_core/src/compile/: analysis.rs  codegen.rs  emit.rs  entrypoint.rs  error.rs  flow.rs  ir.rs  loops.rs  lower.rs  meta.rs  names.rs  node_fns.rs  rosetree.rs  source_map.rs
crates/gantz_core/src/compile/codegen/: node_fn.rs
crates/gantz_core/src/node/: apply.rs  branch.rs  conns.rs  delay.rs  expr.rs  fn_.rs  graph.rs  id.rs  identity.rs  pull.rs  push.rs  ref_.rs  rust.rs  serde.rs  state.rs
crates/gantz_core/src/visit/: typed.rs
crates/gantz_core/tests/: config.rs  cycle.rs  diagnostics.rs  fn_apply.rs  graph.rs  ir_pipeline.rs  nested.rs  rust_fn.rs  serde.rs  source_map.rs  state.rs  steel_target.rs  vm.rs
crates/gantz_egui/: CHANGELOG.md  Cargo.toml
crates/gantz_egui/examples/: demo.rs
crates/gantz_egui/src/: ca.rs  cycle.rs  export.rs  format.rs  impls.rs  keybind.rs  lib.rs  merge.rs  node.rs  ops.rs  reg.rs  response.rs  sugar.rs  sync.rs  view.rs  widget.rs
crates/gantz_egui/src/ca/: commit.rs
crates/gantz_egui/src/format/: error.rs  lower.rs  mod.rs  model.rs  node_value.rs  parse.rs  raise.rs  writer.rs
crates/gantz_egui/src/impls/: apply.rs  bang.rs  branch.rs  delay.rs  expr.rs  fn_.rs  graph.rs  identity.rs  inlet.rs  log.rs  number.rs  ops.rs  outlet.rs
crates/gantz_egui/src/node/: comment.rs  fn_named_ref.rs  frame_bang.rs  graph.rs  inspect.rs  named_ref.rs  plot.rs
crates/gantz_egui/src/widget/: checkbox_enabled.rs  command_palette.rs  gantz.rs  global_config.rs  graph_config.rs  graph_scene.rs  graph_select.rs  graph_tab.rs  head_name_edit.rs  head_row.rs  history_view.rs  keybinds_config.rs  label_button.rs  label_toggle.rs  log_view.rs  node_inspector.rs  node_palette.rs  pane_menu.rs  panes_config.rs  perf_view.rs  settings.rs  steel_view.rs  style_config.rs  tab.rs  trace_view.rs
crates/gantz_format/: CHANGELOG.md  Cargo.toml
crates/gantz_format/src/: datum.rs  error.rs  lib.rs  lower.rs  model.rs  node_set.rs  parse.rs  raise.rs  sexpr.rs  sugar.rs  tag.rs  writer.rs
crates/gantz_format_derive/: Cargo.toml
crates/gantz_format_derive/src/: lib.rs
crates/gantz_nodetag/: Cargo.toml
crates/gantz_nodetag/src/: lib.rs
crates/gantz_nodetag_derive/: Cargo.toml
crates/gantz_std/: CHANGELOG.md  Cargo.toml
crates/gantz_std/src/: bang.rs  lib.rs  log.rs  number.rs  ops.rs  sugar.rs
crates/gantz_std/tests/: bang.rs  log.rs  number.rs
examples/: open_project.rs  project.rs
gantz/: Cargo.toml
gantz-derive/: Cargo.toml  README.md
gantz-derive/src/: lib.rs
gantz/src/: lib.rs  project.rs
gantz/tests/: graph.rs  nested.rs
gantz_core/: Cargo.toml
gantz_core/src/: lib.rs
gantz_core/src/graph/: codegen.rs  mod.rs
gantz_core/src/node/: deps.rs  expr.rs  mod.rs  pull.rs  push.rs  serde.rs  state.rs
gantz_derive/: Cargo.toml  README.md
gantz_derive/src/: lib.rs  node.rs
pkgs/: gantz-unwrapped.nix  gantz-wasm-bindgen.nix  gantz-wasm.nix  gantz-website.nix  gantz.nix  serve-gantz-website.nix  wasm-bindgen-cli.nix
pr-preview/pr-135/: gantz.js  index.html
pr-preview/pr-158/: gantz.d.ts  gantz.js
pr-preview/pr-160/: gantz.d.ts  gantz_bg.wasm.d.ts
pr-preview/pr-161/: gantz.d.ts  gantz_bg.wasm.d.ts
pr-preview/pr-162/: gantz.d.ts  gantz_bg.wasm.d.ts
pr-preview/pr-163/: gantz.d.ts  gantz.js  gantz_bg.wasm.d.ts  sw.js
pr-preview/pr-164/: gantz.js  gantz_bg.wasm.d.ts
pr-preview/pr-165/: gantz.d.ts  gantz_bg.wasm.d.ts
pr-preview/pr-167/: gantz.d.ts  gantz.js  gantz_bg.wasm.d.ts  index.html
pr-preview/pr-168/: gantz.d.ts  gantz_bg.wasm.d.ts
pr-preview/pr-171/: gantz.d.ts  gantz.js  gantz_bg.wasm.d.ts
pr-preview/pr-173/: gantz.d.ts  gantz.js  gantz_bg.wasm.d.ts
pr-preview/pr-174/: gantz.d.ts  gantz.js  gantz_bg.wasm.d.ts
pr-preview/pr-175/: gantz.d.ts  gantz.js  gantz_bg.wasm.d.ts
pr-preview/pr-176/: gantz.d.ts  gantz.js  gantz_bg.wasm.d.ts
pr-preview/pr-179/: gantz.d.ts  gantz_bg.wasm.d.ts
pr-preview/pr-180/: gantz.js  index.html
pr-preview/pr-182/: gantz.js  index.html
pr-preview/pr-185/: gantz.js  index.html
pr-preview/pr-186/: index.html
pr-preview/pr-187/: gantz.js  index.html
pr-preview/pr-188/: gantz.js  index.html
pr-preview/pr-191/: gantz.js  index.html
pr-preview/pr-192/: gantz.js  index.html
pr-preview/pr-194/: gantz.js  index.html
pr-preview/pr-195/: index.html
pr-preview/pr-196/: index.html
pr-preview/pr-197/: gantz.js  index.html
src/: graph.rs  lib.rs  node.rs  project.rs
src/graph/: codegen.rs  (+1 more)
tests/: counter.rs  graph.rs
(+106 files in other folders)
