[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.package]
authors = ["nannou-org"]
edition = "2024"
homepage = "https://github.com/nannou-org/gantz"
license = "Apache-2.0"
repository = "https://github.com/nannou-org/gantz"

[workspace.dependencies]
dyn-clone = "1"
dyn-hash = "0.2.2"
eframe = { version = "0.32", features = ["persistence"] }
egui = { version = "0.32", default-features = false }
egui_extras = { version = "0.32", default-features = false, features = ["syntect"] }
egui_graph = "0.6"
env_logger = "0.10"
gantz_core = { version = "0.1.0", path = "crates/gantz_core" }
gantz_egui = { version = "0.1.0", path = "crates/gantz_egui", features = ["serde"] }
gantz_std = { version = "0.1.0", path = "crates/gantz_std" }
humantime = "2.2"
log = { version = "0.4", features = ["serde"] }
petgraph = { version = "0.6", features = ["serde-1"] }
ron = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steel-core = "0.7"
steel-derive = "0.6"
sublime_fuzzy = "0.7"
thiserror = "2"
typetag = "0.2"
