[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.package]
authors = ["nannou-org"]
edition = "2024"
homepage = "https://github.com/nannou-org/gantz"
license = "Apache-2.0"
repository = "https://github.com/nannou-org/gantz"

[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_render",
    "bevy_shader",
    "bevy_window",
    "multi_threaded",
    "std",
    # "trace", # FIXME: Re-add once this lands https://github.com/emilk/egui/pull/7646.
    "wayland",
    "webgl2",
] }
bevy_app = "0.17"
bevy_ecs = "0.17"
bevy_egui = { version = "0.38" }
bevy_gantz = { version = "0.1.0", path = "crates/bevy_gantz" }
bevy_input = "0.17"
bevy_pkv = "0.14"
bevy_time = "0.17"
bevy_window = "0.17"
blake3 = "1"
dyn-clone = "1"
dyn-hash = "0.2.2"
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    # "wgpu",
] }
egui = { version = "0.33", default-features = false }
egui_extras = { version = "0.33", default-features = false, features = ["syntect"] }
egui_graph = "0.8"
egui_tiles = "0.14"
env_logger = { version = "0.11", default-features = false }
gantz_ca = { version = "0.1.0", path = "crates/gantz_ca" }
gantz_core = { version = "0.1.0", path = "crates/gantz_core" }
gantz_egui = { version = "0.1.0", path = "crates/gantz_egui" }
gantz_std = { version = "0.1.0", path = "crates/gantz_std" }
hex = "0.4"
humantime = "2.3"
log = { version = "0.4", features = ["serde"] }
petgraph = { version = "0.8", features = ["serde-1"] }
ron = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steel-core = "0.7"
steel-derive = "0.6"
sublime_fuzzy = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
typetag = "0.2"
web-sys = "0.3"
web-time = "1"

[profile.wasm_release]
inherits = "release"
opt-level = 'z'  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1
panic = 'abort'  # Remove panic unwinding to reduce size
strip = true     # Remove debug symbols
debug = false
