[package]
name = "gantz-derive"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A crate providing procedural macros for the gantz library"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["graph", "node", "derive", "procedural", "macro"]
repository = "https://github.com/nannou-org/gantz.git"
homepage = "https://github.com/nannou-org/gantz"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.14", features = ["extra-traits", "full"] }
