[package]
name = "gantz"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A crate for creating and evaluating executable directed graphs at runtime."
readme = "README.md"
keywords = ["graph", "node", "graphical", "programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/gantz.git"
homepage = "https://github.com/nannou-org/gantz"
edition = "2018"

[dependencies]
cargo = "0.34"
derive_more = "0.14"
failure = "0.1"
gantz_core = { path = "../gantz_core", version = "0.1" }
libloading = "0.5"
petgraph = { version = "0.4", features = ["serde-1"] }
proc-macro2 = "0.4"
quote = "0.6"
serde = "1"
serde_json = "1"
slug = "0.1"
syn = "0.15"
toml = "0.5"
typetag = "0.1"
