[package]
name = "gantz_core"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "Core traits and other items for gantz."
readme = "README.md"
keywords = ["graph", "node", "graphical", "programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/gantz.git"
homepage = "https://github.com/nannou-org/gantz"
edition = "2018"

[dependencies]
derive_more = "0.14"
failure = "0.1"
petgraph = { version = "0.4", features = ["serde-1"] }
proc-macro2 = "0.4"
quote = "0.6"
serde = "1"
syn = "0.15"
typetag = "0.1"
