[package]
name = "gantz_core"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "Core traits and other items for gantz."
readme = "README.md"
keywords = ["graph", "node", "graphical", "programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/gantz.git"
homepage = "https://github.com/nannou-org/gantz"
edition = "2018"

[dependencies]
petgraph = { version = "0.5", features = ["serde-1"] }
proc-macro2 = "1"
quote = "1"
serde = "1"
syn = { version = "1", features = ["extra-traits"] }
thiserror = "1"
typetag = "0.1"
