[package]
name = "bevy_gantz_egui"
version = "0.1.0"
description = "Egui integration for bevy_gantz"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_egui.workspace = true
bevy_gantz.workspace = true
bevy_log.workspace = true
egui_graph.workspace = true
gantz_ca.workspace = true
gantz_core.workspace = true
gantz_egui.workspace = true
serde.workspace = true
steel-core.workspace = true
web-time.workspace = true
