[package]
name = "bevy_gantz_egui"
version = "0.3.1"
description = "Egui integration for bevy_gantz"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_egui.workspace = true
bevy_time.workspace = true
bevy_gantz.workspace = true
bevy_log.workspace = true
bincode.workspace = true
bevy_tasks.workspace = true
egui_extras.workspace = true
egui_graph.workspace = true
gantz_base.workspace = true
gantz_ca.workspace = true
gantz_core.workspace = true
gantz_egui.workspace = true
gantz_format.workspace = true
gantz_nodetag.workspace = true
rfd.workspace = true
serde.workspace = true
steel-core.workspace = true
web-time.workspace = true
