[package]
name = "gantz"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gantz"
path = "src/main.rs"

[dependencies]
dyn-hash.workspace = true
eframe.workspace = true
egui.workspace = true
egui_graph.workspace = true
env_logger.workspace = true
gantz_core.workspace = true
gantz_egui.workspace = true
gantz_std.workspace = true
log.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_yml.workspace = true
steel-core.workspace = true
typetag.workspace = true
