[package]
name = "gantz"
version = "0.1.0"
description = "An environment for creative systems."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_gantz.workspace = true
bevy_gantz_egui.workspace = true
bevy_pkv.workspace = true
dyn-clone.workspace = true
dyn-hash.workspace = true
egui_graph.workspace = true
gantz_ca.workspace = true
gantz_core.workspace = true
gantz_egui.workspace = true
gantz_std.workspace = true
petgraph.workspace = true
ron.workspace = true
serde.workspace = true
steel-core.workspace = true
typetag.workspace = true
web-time.workspace = true
