[package]
name = "gantz_ca"
version = "0.1.0"
description = "Content-addressing for gantz"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
gantz_ca_derive.workspace = true
hex.workspace = true
petgraph.workspace = true
serde.workspace = true
