[package]
name = "gantz_core"
version = "0.1.0"
description = "The core types and traits for gantz, an environment for creative systems."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
petgraph.workspace = true
serde.workspace = true
steel-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
env_logger.workspace = true
serde_json.workspace = true
steel-derive.workspace = true
typetag.workspace = true
