[package]
name = "gantz_egui"
version = "0.1.0"
description = "UI traits and widgets that make up the GUI for gantz, an environment for creative systems."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
egui.workspace = true
egui_extras.workspace = true
egui_graph.workspace = true
egui_tiles.workspace = true
gantz_core.workspace = true
gantz_std.workspace = true
humantime.workspace = true
log.workspace = true
petgraph.workspace = true
serde.workspace = true
steel-core.workspace = true
sublime_fuzzy.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
web-time.workspace = true

[dev-dependencies]
dyn-clone.workspace = true
dyn-hash.workspace = true
eframe.workspace = true
ron.workspace = true
typetag.workspace = true
# FIXME: temporarily disabled, see #122.
# Workaround for https://github.com/emilk/egui/issues/7106
# wgpu = { version = "27", features = ["vulkan"] }
# Enable window decorations on wayland.
winit = { version = "0.30", default-features = false, features = ["wayland-csd-adwaita"] }
