[package]
name = "gantz_std"
version = "0.1.0"
description = "A standard library of commonly useful nodes for gantz, an environment for creative systems."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gantz_ca.workspace = true
gantz_core.workspace = true
log.workspace = true
serde.workspace = true
steel-core.workspace = true
steel-derive.workspace = true
typetag.workspace = true
